feat: add paths
remove boilerplate
add steps
add paths

--- a/.docker/nginx/conf.d/default.conf
+++ b/.docker/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
 
-  server_name cp.user-service.com;
+  server_name cp.kb-service.com;
 
   root /app/public;
 
@@ -17,7 +17,7 @@ server {
   }
 
   location ~ ^/index\.php(/|$) {
-      fastcgi_pass php:9000;
+      fastcgi_pass kb-php:9000;
       fastcgi_split_path_info ^(.+\.php)(/.*)$;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
       fastcgi_param SERVER_NAME $server_name;
